@@ -36,9 +36,10 @@ begin
 
    if Verbose_Mode then
       Write_Str ("GNATDIST @dsa_version@ / GNAT @gnat_version@");
-      Write_Str (" Copyright 1996,1997 Free Software Foundation, Inc.");
+      Write_Str (" Copyright 1996-1998 Free Software Foundation, Inc.");
       Write_Eol;
    end if;
+
    Write_Str ("Usage: ");
    Write_Program_Name;
    Write_Str (" [options] name[.cfg] {[partition]}");
@@ -46,6 +47,18 @@ begin
    Write_Eol;
    Write_Eol;
 
+   Write_Str ("  name is a configuration file name from which you can");
+   Write_Str (" omit the .cfg suffix");
+   Write_Eol;
+   Write_Eol;
+
+   Write_Str ("gnatdist switches:");
+   Write_Eol;
+
+   Write_Str ("  -a   Consider all files, even readonly ali files");
+   Write_Eol;
+   Write_Str ("  -f   Force recompilations");
+   Write_Eol;
    Write_Str ("  -M   Output commands to build application manually");
    Write_Eol;
    Write_Str ("  -n   No file stamp consistency check");
@@ -56,15 +69,48 @@ begin
    Write_Eol;
    Write_Eol;
 
-   Write_Str ("  name[.cfg]  Configuration file");
+   Write_Str ("Gcc switches such as -g, -O, etc.");
+   Write_Str (" are directly passed to gcc");
    Write_Eol;
    Write_Eol;
 
-   Write_Str ("  -cargs opts      Arguments to be passed to the compiler");
+   Write_Str ("Source & Library search path switches:");
    Write_Eol;
-   Write_Str ("  -bargs opts      Arguments to be passed to the binder");
+
+   Write_Str ("  -aLdir  Skip missing library sources if ali in dir");
    Write_Eol;
-   Write_Str ("  -largs opts      Arguments to be passed to the linker");
+
+   Write_Str ("  -Adir   like -aLdir -aIdir");
+   Write_Eol;
+
+   Write_Str ("  -aOdir  Specify library/object files search path");
+   Write_Eol;
+
+   Write_Str ("  -aIdir  Specify source files search path");
+   Write_Eol;
+
+   Write_Str ("  -Idir   Like -aIdir -aOdir");
+   Write_Eol;
+
+   Write_Str ("  -I-     Don't look for sources & library files");
+   Write_Str (" in the default directory");
+   Write_Eol;
+
+   Write_Str ("  -Ldir   Look for program libraries also in dir");
+   Write_Eol;
+   Write_Eol;
+
+   Write_Str ("To pass an arbitrary switch to the Compiler, ");
+   Write_Str ("Binder or Linker:");
+   Write_Eol;
+
+   Write_Str ("  -cargs opts   opts are passed to the compiler");
+   Write_Eol;
+
+   Write_Str ("  -bargs opts   opts are passed to the binder");
+   Write_Eol;
+
+   Write_Str ("  -largs opts   opts are passed to the linker");
    Write_Eol;
 
    Exit_Program (E_Fatal);
